# conceptum

./: .gitignore  .gitmodules  .lvimrc  CMakeLists.txt  LICENSE
fabricatio/: AppWindow.cpp  AppWindow.h  CMakeLists.txt  Clock.cpp  Clock.h  ECSContainer.h  EditorUI.h  GlAppWindow.cpp  GlAppWindow.h  IO.cpp  IO.h  InputSystem.cpp  InputSystem.h  MarchingCubes.cpp  MarchingCubes.h  Material.cpp  Material.h  Mesh.h  MeshCatalog.cpp  MeshCatalog.h  NixRendererLoader.cpp  NixRendererLoader.h  PlayerControlComponent.h  PlayerControllerSystem.cpp  PlayerControllerSystem.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  ScalarGrid.cpp  ScalarGrid.h  Serializer.cpp  Serializer.h  ShaderProgram.cpp  ShaderProgram.h  SpinSystem.cpp  SpinSystem.h  System.h  TerrainGenerator.cpp  TerrainGenerator.h  (+3 more)
fabricatio/assets/meshes/cat/: cat.mtl
fabricatio/assets/meshes/cube/: cube.blend  cube.blend1  cube.mtl
fabricatio/assets/meshes/katinka/: Girl.mtl
fabricatio/assets/meshes/punk/: punk.mtl
fabricatio/assets/meshes/tijger/: tijger.mtl
fabricatio/shaders/: diffuse.frag  standard.frag  standard.vert  terrain.frag  underwater.frag
fundamentum/: CMakeLists.txt  Logger.cpp  Logger.h
producentis/: AppWindow.h  AppWindowPrivate.h  CMakeLists.txt  Camera.cpp  Camera.h  Input.h  KeyEvent.h  KeyInput.h  Lights.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderProgram.cpp  Texture.cpp  Texture.h  producentis.h
src/: AppWindow.cpp  CMakeLists.txt  Clock.cpp  Clock.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  ObjectRenderer.cpp  ObjectRenderer.h  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h  main.cpp
src/shaders/: underwater.frag
